Updated assembly video

--- a/support/wts-01/index.html
+++ b/support/wts-01/index.html
@@ -110,7 +110,7 @@
 <section id="video" class="container text-center my-5">
   <h2 class="section-title">📺 Assembly Video</h2>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Uu5Wjd5eki8?si=ED3OE5OBE4MFqfaZ" allowfullscreen></iframe>
   </div>
 </section>
 
