Update email to encoded string

--- a/support/wts-01/index.html
+++ b/support/wts-01/index.html
@@ -116,7 +116,7 @@
 
 <section id="contact" class="container my-5">
   <h2 class="section-title text-center">📩 Contact Support</h2>
-  <form action="https://formsubmit.co/support.form@rik-comfort.com" method="POST" class="contact-form">
+  <form action="https://formsubmit.co/fd550d31e6c61de91199117539ab45f8" method="POST" class="contact-form">
     <input type="hidden" name="_captcha" value="false">
     <div class="form-group">
       <label>Name</label>
