Added Elastic Cord update note and Spanish version

--- a/support/wts-01/es/index.html
+++ b/support/wts-01/es/index.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>WTS-01 Support - Paquber</title>
+  <title>Soporte WTS-01 - Paquber</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     header { background: white; padding: 1rem 2rem; border-bottom: 1px solid #eee; position: sticky; top: 0; z-index: 1000; }
     .navbar-nav .nav-link { margin-left: 1rem; font-weight: 500; }
     .hero {
-      background: url('hero-bg.png') no-repeat center center;
+      background: url('../hero-bg.png') no-repeat center center;
       background-size: cover;
       color: white;
       text-align: center;
@@ -94,17 +94,17 @@
 
 <header>
   <div class="d-flex justify-content-between align-items-center container">
-    <a href="#" class="logo"><img src="paquber_v2.svg" height="40" alt="Paquber logo"></a>
+    <a href="#" class="logo"><img src="../paquber_v2.svg" height="40" alt="Paquber logo"></a>
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a href="#hero" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#video" class="nav-link">Assembly</a></li>
-        <li class="nav-item"><a href="#contact" class="nav-link">Support</a></li>
+        <li class="nav-item"><a href="#hero" class="nav-link">Inicio</a></li>
+        <li class="nav-item"><a href="#video" class="nav-link">Ensamblaje</a></li>
+        <li class="nav-item"><a href="#contact" class="nav-link">Soporte</a></li>
       </ul>
       <div class="lang-switcher ml-3">
         <span class="text-muted">🌐</span>
-        <strong>English</strong> |
-        <a href="es/index.html">Español</a>
+        <a href="../index.html">English</a> |
+        <strong>Español</strong>
       </div>
     </nav>
   </div>
@@ -112,57 +112,57 @@
 
 <section id="hero" class="hero">
   <div class="hero-content container">
-    <h1>WTS-01 Wooden Toy Organizer</h1>
-    <p class="lead">Toy Storage for Nursery</p>
-    <p>Everything you need to assemble, use, and get help with your product.</p>
+    <h1>Organizador de Juguetes WTS-01</h1>
+    <p class="lead">Almacenamiento para la habitación del bebé</p>
+    <p>Todo lo que necesitas para ensamblar, usar y obtener ayuda con tu producto.</p>
     <a href="#video" class="scroll-down-icon"><i class="fas fa-chevron-down"></i></a>
   </div>
 </section>
 
 <section class="container my-5">
-  <h2 class="section-title text-center mb-4">🔧 Elastic Cord Update</h2>
+  <h2 class="section-title text-center mb-4">🔧 Actualización de elásticos</h2>
   <div class="alert alert-info" role="alert" style="font-size: 1rem;">
-    <strong>Update (July 2025):</strong><br>
-    We’ve recently simplified the design of the elastic cords in your WTS-01 unit to make assembly easier and more intuitive.
+    <strong>Actualización (Julio 2025):</strong><br>
+    Hemos simplificado recientemente el diseño de los cordones elásticos en tu unidad WTS-01 para que el ensamblaje sea más fácil e intuitivo.
     <ul class="mt-2 mb-0">
-      <li>The updated package includes <strong>2 elastic cords</strong> instead of 4 (2 short, 2 long).</li>
-      <li>Each cord loops around both the short and long side of the frame.</li>
-      <li><strong>Benefits:</strong> fewer knots, quicker setup, and simpler tension adjustment.</li>
+      <li>El paquete actualizado incluye <strong>2 cordones elásticos</strong> en lugar de 4 (2 cortos, 2 largos).</li>
+      <li>Cada cordón se enrolla alrededor del lado corto y largo del marco.</li>
+      <li><strong>Beneficios:</strong> menos nudos, configuración más rápida y ajuste de tensión más simple.</li>
     </ul>
-    If you have any questions or run into issues during assembly, we’re always happy to help — just scroll down to <a href="#contact">Contact Support</a>.
+    Si tienes alguna pregunta o problema durante el ensamblaje, estaremos encantados de ayudarte — simplemente desplázate hacia abajo a <a href="#contact">Soporte</a>.
   </div>
 </section>
 
 <section id="video" class="container text-center my-5">
-  <h2 class="section-title">📺 Assembly Video</h2>
+  <h2 class="section-title">📺 Video de Ensamblaje</h2>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Uu5Wjd5eki8?si=ED3OE5OBE4MFqfaZ" allowfullscreen></iframe>
   </div>
 </section>
 
 <section id="contact" class="container my-5">
-  <h2 class="section-title text-center">📩 Contact Support</h2>
+  <h2 class="section-title text-center">📩 Contactar Soporte</h2>
   <form action="https://formsubmit.co/fd550d31e6c61de91199117539ab45f8" method="POST" class="contact-form">
     <input type="hidden" name="_captcha" value="false">
     <div class="form-group">
-      <label>Name</label>
+      <label>Nombre</label>
       <input name="name" type="text" class="form-control" required />
     </div>
     <div class="form-group">
-      <label>Email</label>
+      <label>Correo electrónico</label>
       <input name="email" type="email" class="form-control" required />
     </div>
     <div class="form-group">
-      <label>Message</label>
+      <label>Mensaje</label>
       <textarea name="message" rows="4" class="form-control" required></textarea>
     </div>
-    <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+    <button type="submit" class="btn btn-primary btn-block">Enviar Mensaje</button>
   </form>
 </section>
 
 <section class="container ai-section">
-  <h5>🤖 Coming Soon:</h5>
-  <p>Our AI assistant will soon be available to answer your WTS-01 questions instantly.</p>
+  <h5>🤖 Próximamente:</h5>
+  <p>Muy pronto estará disponible nuestro asistente con inteligencia artificial para responder tus preguntas sobre el producto WTS-01.</p>
 </section>
 
 <footer>
@@ -170,7 +170,7 @@
     <div class="row">
       <div class="col-md-6 mb-4">
         <div class="footer-logo">Paquber</div>
-        <p class="text-muted">Making space feel like home.</p>
+        <p class="text-muted">Haciendo que tu espacio se sienta como en casa.</p>
         <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-square"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
@@ -178,14 +178,14 @@
         </div>
       </div>
       <div class="col-md-6 mb-4 footer-links">
-        <a href="#hero">Home</a>
-        <a href="#video">Assembly</a>
-        <a href="#contact">Support</a>
-        <a href="#">Privacy Policy</a>
+        <a href="#hero">Inicio</a>
+        <a href="#video">Ensamblaje</a>
+        <a href="#contact">Soporte</a>
+        <a href="#">Política de Privacidad</a>
       </div>
     </div>
     <div class="text-center text-muted mt-3">
-      &copy; 2025 Paquber. All rights reserved.
+      &copy; 2025 Paquber. Todos los derechos reservados.
     </div>
   </div>
 </footer>
